--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -247,7 +247,7 @@ $}
  } 
 }\qquad.
 \]
-We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$, and we know, by Lemma~\vref{lemma:GenericContraction}, that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and the size of $\beta$. Hence, the size of $\Psi$ depends at most polynomially on the size of $\Phi$.
+We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$, and we know, by Proposition~\vref{proposition:GenericStructural}, that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and the size of $\beta$. Hence, the size of $\Psi$ depends at most polynomially on the size of $\Phi$.
 \end{proof}
 %----------
 
