--- a/main_result.tex
+++ b/main_result.tex
@@ -27,7 +27,7 @@ then
 \end{theorem}
 
 \begin{proof}
-The statements follow by Proposition~\vref{proposition:Simplifier}, Proposition~\vref{proposition:IsolatedSubflowRemover}, Proposition~\vref{proposition:PathBreaker} and Proposition~\vref{proposition:QuasipolynomialMultipleIsolatedSubflowRemover}.
+The statements follow by Proposition~\vref{proposition:Simplifier}, Proposition~\vref{proposition:IsolatedSubflowRemover} and Proposition~\vref{proposition:PathBreaker}.
 \end{proof}
 %----------
 
