--- a/global_reductions/isolated_subflow.tex
+++ b/global_reductions/isolated_subflow.tex
@@ -133,7 +133,7 @@ Since $\psi$ is connected and contains no identity or cut vertices, the mapping 
  }
 }\quad.
 \]
-We know that the size of $\Phi_\ttt$ and the size of $\Phi_\fff$ depend polynomially on the size of $\Phi'$ by Theorem~\vref{theorem:aiDecomposedForm} and Proposition~\vref{proposition:DerivationSubstitution}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Lemma~\vref{lemma:GenericContraction}, so the size of $\Psi$ depends polynomially on the size of $\Phi$.
+We know that the size of $\Phi_\ttt$ and the size of $\Phi_\fff$ depend polynomially on the size of $\Phi'$ by Theorem~\vref{theorem:aiDecomposedForm} and Proposition~\vref{proposition:DerivationSubstitution}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Proposition~\vref{proposition:GenericStructural}, so the size of $\Psi$ depends polynomially on the size of $\Phi$.
 \end{proof}
 %----------
 
