Added reference to existence of aiDecomposedForm to soundness proof of simplifier

--- a/global_reductions/simplifier.tex
+++ b/global_reductions/simplifier.tex
@@ -132,7 +132,7 @@ Assume all the edges in $\phi$ are mapped to from occurrences of the atoms $a_1$
  \vlsbr(\vlinf{}{}{\vlsmallbrackets\vls[a_1^\phi.\bar a_1^\psi]}{\ttt}\;.\;\cdots\;.\;\vlinf{}{}{\vlsmallbrackets\vls[a_n^\phi.\bar a_n^\psi]}{\ttt}\;.\;\alpha)
 }\quad,
 \]
-be the $\ai$-decomposed form of $\Phi$.
+be the $\ai$-decomposed form of $\Phi$, which exists, and depends at most cubically on $\Phi$, by Theorem~\vref{theorem:aiDecomposedForm}.
 
 \TODO{Consider using $\epsilon$'s instead of $\phi$'s above.}
 
