--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -106,7 +106,7 @@ The notion of substitution can be extended to allow $\phi$ to contain interactio
 
 %-----------------
 \begin{convention}
-To avoid ambiguity in Definitions~\vref{definition:FourBoxes}, \vref{definition:IsolatedSubflowRemoval} and \vref{definition:PathBreaker} we have establish the following convention:
+To avoid ambiguity in Definition~\vref {definition:FourBoxes}, Definition~\vref {definition:IsolatedSubflowRemoval} and Definition~\vref {definition:PathBreaker} we have establish the following convention:
 Let $\boldsymbol\epsilon=\epsilon_1,\dots,\epsilon_n$, $\boldsymbol\iota=\iota_1,\dots,\iota_m$, $\boldsymbol{\epsilon'}=\epsilon'_1,\dots,\epsilon'_n$ and $\boldsymbol{\iota'}=\iota'_1,\dots,\iota'_m$, then, when we write
 \[
 \atomicflow
