--- a/defs.tex
+++ b/defs.tex
@@ -26,7 +26,7 @@
 %-------------------------------------------
 
 \newif\ifnonotes\nonotesfalse
-\newcommand{\Ale }[1]{\ifnonotes\else{\color{blue}     \noindent{\bf A: }#1}\fi}
+\newcommand{\Tom }[1]{\ifnonotes\else{\color{green}     \noindent{\bf T: }#1}\fi}\newcommand{\Ale }[1]{\ifnonotes\else{\color{blue}     \noindent{\bf A: }#1}\fi}
 \newcommand{\TODO}[1]{\ifnonotes\else{\color{red}    \noindent{\bf TODO }#1}\fi}
 %\nonotestrue % If this is commented, notes appear in the paper (if any)
 
