--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -219,6 +219,8 @@ do not contain $\aid$, $\aiu$, $\awd$, $\awu$ vertices, and the flow to the righ
 %===========================================================
 \subsection{Flow Isomorphism}\label{section:FlowIsomorphism}
 
+\Tom{We have defined atomic flows informally, but in the following we need to formally define flow isomorphisms, since it has not been formally defined before (or we could just ignore it if its meaning is obvious). In order to do that we need to:}
+
 \newcommand{\up}{{\mathit up}}
 \newcommand{\lo}{{\mathit lo}}
 
@@ -380,6 +382,8 @@ Given an atomic flow $\phi$ and a polarity assignment $\pi$ for $\phi$, the pola
 
 %=======================================================
 \subsection{Paths}\label{subsection:Paths}
+
+\Tom{This is basically taken from AFI. Should we make this more informal?}
 
 We now define the notion of `path' in atomic flows. Paths are sequences of adjacent edges that only `go down' or only `go up'.
 
