--- a/thesis.tex
+++ b/thesis.tex
@@ -11,6 +11,9 @@
   \expandafter\ifx\csname leqslant\endcsname\relax\usepackage{txfonts}\fi
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
+% please remove before submitting
+\usepackage[notref,notcite]{showkeys}
+
 
 
 \input{defs}
