Changed intro to Main Result

--- a/main_result.tex
+++ b/main_result.tex
@@ -1,8 +1,8 @@
 \section{Main Result}\label{section:MainResult}
 
-\TODO{Redo the introduction to this section:}
+\Tom{Alessio: I will leave it to you to write something wonderfully insightful here. I hope that is ok.}
 
-We now present the main result of this thesis: Three procedures for obtaining weakly streamlined derivations. Corollaries of the main results are: cut elimination, super-streamlining and hyper-streamlining.
+We now present the main result of this article: Two procedures for obtaining weakly streamlined derivations.
 
 %----------------------------------------------
 \begin{theorem}\label{theorem:WeakStreamlining}
