Added short explanation of PB Lemma

--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -251,6 +251,10 @@ We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$
 \end{proof}
 %----------
 
+\Tom{Added explanation:}
+
+We now show the basic properties of $\to_\frpb$. Namely, that the reduction does not create any `new' interaction or cut vertices, that it does not create any `new' paths between interaction or cut vertices, and that it breaks all the paths between the evidenced interaction and cut vertices.
+
 %-------------------------------------
 \begin{lemma}\label{lemma:PathBreaker}
 Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$; in the following we refer to Definition~\ref{definition:PathBreaker}:
