Comment out showkeys by default

--- a/thesis.tex
+++ b/thesis.tex
@@ -12,7 +12,7 @@
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
 % please remove before submitting
-\usepackage[notref,notcite]{showkeys}
+%\usepackage[notref,notcite]{showkeys}
 
 
 
